fix bug when user can't press some buttons on mobile devices because hidden popup covers part of the keyboard - change property opacity: 0 to visibility: hidden

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ h3 {
 }
 
 .hidden {
-    opacity: 0;
+    visibility: hidden;
     left: -10%;
 
 }
